hopefully fix scroll on safari

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -171,6 +171,7 @@ pre {
   word-wrap: break-word;
   background-color: #f9f9f9;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 pre code {
   padding: 0;
